objects/ssot__CareObservationItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BaselineUnitId__c</fullName>
        <label>Baseline Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BaselineValueText__c</fullName>
        <label>Baseline Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationId__c</fullName>
        <label>Care Observation</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationInterpretationCode__c</fullName>
        <label>Care ObservationI nterpretation Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationItemValueType__c</fullName>
        <label>CareObservationItemValueType</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComponentTypeCodeId__c</fullName>
        <label>Component Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Observation Item Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsObserved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Observed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LowerBaselineValueNumber__c</fullName>
        <label>Lower Baseline Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MissingDataReasonText__c</fullName>
        <label>Missing Data Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumericValueNumber__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationEndDateTime__c</fullName>
        <label>Observation End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationItemType__c</fullName>
        <label>Observation Item Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservationStartDateTime__c</fullName>
        <label>Observation Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedUnitOfMeasureId__c</fullName>
        <label>Observed Unit of Measure</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueCodeId__c</fullName>
        <label>ObservedValueCode</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueDenominatorNumber__c</fullName>
        <label>Observed Value Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueNumeratorNumber__c</fullName>
        <label>Observed Value Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueText__c</fullName>
        <label>Observed Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObservedValueUnit__c</fullName>
        <label>Observed Value Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UpperBaselineValueNumber__c</fullName>
        <label>Upper Baseline Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ValueInterpretation__c</fullName>
        <label>Value Interpretation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726405016_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservationItem_ComponentTypeCod_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareObservationItem_ComponentTypeCod_rel</relationshipLabel>
        <relationshipName>rel_1716726405016_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726406359_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservationItem_ObservedValueCod_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareObservationItem_ObservedValueCod_rel</relationshipLabel>
        <relationshipName>rel_1716726406359_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726412106_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareObservationItem_CareObservationI_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>CareObservationItem_CareObservationI_rel</relationshipLabel>
        <relationshipName>rel_1716726412106_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>